--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -1,7 +1,6 @@
 <h1>Blog Posts</h1>
 
-<ul>
-  <% @blog_posts.each do |blog_post| %>
-    <li><%= blog_post.title %></li>
-  <% end %>
-</ul>
+<% @blog_posts.each do |blog_post| %>
+  <h2><%= blog_post.title %></h2>
+  <%= blog_post.body %>
+<% end %>
