--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Blog Posts</h1>
 
 <% @blog_posts.each do |blog_post| %>
-  <h2><%= blog_post.title %></h2>
-  <%= blog_post.body %>
+  <div>
+    <h2><%= link_to blog_post.title, blog_post %></h2>
+    <%= blog_post.body %>
+  </div>
 <% end %>
