--- a/app/views/blog_posts/new.html.erb
+++ b/app/views/blog_posts/new.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Back to Blog Posts", blog_posts_path %>
 <h1>New Blog Post</h1>
 
 <%= render partial: "form", locals: { blog_post: @blog_post } %>
