--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Back to Blog Posts", blog_posts_path %>
 <h1><%= @blog_post.title %></h1>
 <p><%= @blog_post.body %></p>
-<%= link_to "Edit", edit_blog_post_path(@blog_post) %>
+<%= link_to "Edit", edit_blog_post_path(@blog_post) if user_signed_in? %>
